crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/invalid_function_type_visibility/local_variable/input.sol
// SPDX-License-Identifier: MIT
pragma solidity *;

contract C {
    function f() public {
        function (uint256) private x;
    }
}
